--- a/package.json
+++ b/package.json
@@ -1,22 +1,49 @@
 {
-  "name": "webli-ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
-  }
+	"name": "webli-ui",
+	"version": "0.0.0",
+	"description": "library of UI components for react w/ typescript project",
+	"type": "module",
+	"keywords": ["ui-kit", "react", "typescript"],
+	"contributors": [
+		{
+			"name": "Fryly"
+		},
+		{
+			"name": "NikDoe"
+		}
+	],
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/NikDoe/webli-ui"
+	},
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"prepare": "husky install",
+		"pretty": "prettier --write .",
+		"lint": "eslint --fix ."
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.27",
+		"@types/react-dom": "^18.0.10",
+		"@typescript-eslint/eslint-plugin": "^5.50.0",
+		"@typescript-eslint/parser": "^5.50.0",
+		"@vitejs/plugin-react": "^3.1.0",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-react": "^7.32.2",
+		"prettier": "2.8.3",
+		"stylelint": "^14.16.1",
+		"stylelint-config-prettier": "^9.0.4",
+		"stylelint-config-standard": "^29.0.0",
+		"typescript": "^4.9.3",
+		"vite": "^4.1.0",
+		"husky": "^8.0.0"
+	}
 }
