--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"prepare": "husky install",
-		"pretty": "prettier --write .",
+		"pretty": "prettier --write . && git add .",
 		"lint": "eslint --fix ."
 	},
 	"dependencies": {
