--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"prepare": "husky install",
-		"pretty": "prettier --write . && git add .",
-		"lint": "eslint --fix ."
+		"lint": "npx eslint --fix"
 	},
 	"dependencies": {
 		"react": "^18.2.0",
@@ -42,12 +41,16 @@
 		"eslint": "^8.33.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-react": "^7.32.2",
+		"husky": "^8.0.0",
+		"lint-staged": "^13.1.0",
 		"prettier": "2.8.3",
 		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.4",
 		"stylelint-config-standard": "^29.0.0",
 		"typescript": "^4.9.3",
-		"vite": "^4.1.0",
-		"husky": "^8.0.0"
+		"vite": "^4.1.0"
+	},
+	"lint-staged": {
+		"*": "prettier --ignore-unknown --write"
 	}
 }
