chanhe fullname in package.json & LICENSE

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 	],
 	"contributors": [
 		{
-			"name": "Fryly"
+			"name": "Maxim Myatenko"
 		},
 		{
-			"name": "NikDoe"
+			"name": "Nikita Kuzmenko"
 		}
 	],
 	"license": "MIT",
