--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"name": "webli-ui",
 	"version": "0.0.0",
 	"description": "library of UI components for react w/ typescript project",
-	"type": "module",
 	"keywords": [
 		"ui-kit",
 		"react",
@@ -21,17 +20,16 @@
 		"type": "git",
 		"url": "https://github.com/NikDoe/webli-ui"
 	},
+	"main": "./dist/index.umd.js",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"prepare": "husky install"
-	},
-	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"prepare": "husky install",
+		"pretty": "prettier --write ."
 	},
 	"devDependencies": {
+		"@types/node": "^18.13.0",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
@@ -43,15 +41,25 @@
 		"husky": "^8.0.0",
 		"lint-staged": "^13.1.0",
 		"prettier": "2.8.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.4",
 		"stylelint-config-standard": "^29.0.0",
+		"ts-loader": "^9.4.2",
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0"
+	},
+	"peerDependencies": {
+		"react": "*",
+		"react-dom": "*"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": "npx eslint --fix",
 		"*.(css|scss)": "npx stylelint --fix",
 		"*.{js,jsx,ts,tsx,html,css,json,cjs,md}": "npx prettier --write"
-	}
+	},
+	"files": [
+		"dist"
+	]
 }
