--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,12 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"outDir": "./dist/",
+		"sourceMap": true,
+		"declaration": true
 	},
 	"include": ["src"],
+	"exclude": ["node_modules", "dist"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
