--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
 		"stylelint-config-standard": "^29.0.0",
 		"ts-loader": "^9.4.2",
 		"typescript": "^4.9.3",
-		"vite": "^4.1.0"
+		"vite": "^4.1.0",
+		"vite-plugin-dts": "^1.7.2"
 	},
 	"peerDependencies": {
 		"react": "*",
