--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
 		"type": "git",
 		"url": "https://github.com/NikDoe/webli-ui"
 	},
-	"main": "./dist/index.umd.js",
+	"type": "module",
+	"main": "./dist/index.umd.cjs",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/index.js",
+			"require": "./dist/index.umd.cjs"
+		}
+	},
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
