--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"prepare": "husky install",
-		"pretty": "prettier --write ."
+		"pretty": "prettier --write .",
+		"pub": "npm run build && npm version patch && npm publish"
 	},
 	"devDependencies": {
 		"@types/node": "^18.13.0",
