--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,9 @@
 {
-	"extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+	"extends": [
+		"stylelint-config-standard",
+		"stylelint-config-prettier",
+		"stylelint-config-recommended-scss"
+	],
 	"rules": {
 		"selector-class-pattern": [
 			"^([A-Z][a-z]+)+(__([A-Z][a-z]+)+)?(_[a-z]+([A-Z][a-z]+)*){0,2}$",
