--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
 		"prettier": "2.8.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"sass": "^1.58.0",
 		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.4",
+		"stylelint-config-recommended-scss": "^8.0.0",
 		"stylelint-config-standard": "^29.0.0",
 		"ts-loader": "^9.4.2",
 		"typescript": "^4.9.3",
