--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		".": {
 			"import": "./dist/index.js",
 			"require": "./dist/index.umd.cjs"
-		}
+		},
+		"./dist/style.css": "./dist/style.css"
 	},
 	"scripts": {
 		"dev": "vite",
