--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -11,6 +11,7 @@
 				"message": "Selector class pattern does not match project conventions",
 				"resolveNestedSelectors": true
 			}
-		]
+		],
+		"import-notation": null
 	}
 }
