--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 		"preview": "vite preview",
 		"prepare": "husky install",
 		"pretty": "prettier --write .",
-		"pub": "npm run build && npm version patch && npm publish"
+		"pub:p": "npm run build && npm version patch && npm publish",
+		"pub:min": "npm run build && npm version minor && npm publish",
+		"pub:maj": "npm run build && npm version major && npm publish"
 	},
 	"devDependencies": {
 		"@types/node": "^18.13.0",
@@ -47,7 +49,6 @@
 		"@typescript-eslint/parser": "^5.50.0",
 		"@vitejs/plugin-react": "^3.1.0",
 		"eslint": "^8.33.0",
-		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-react": "^7.32.2",
 		"husky": "^8.0.0",
 		"lint-staged": "^13.1.0",
@@ -59,7 +60,6 @@
 		"stylelint-config-prettier": "^9.0.4",
 		"stylelint-config-recommended-scss": "^8.0.0",
 		"stylelint-config-standard": "^29.0.0",
-		"ts-loader": "^9.4.2",
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0",
 		"vite-plugin-dts": "^1.7.2"
@@ -74,6 +74,6 @@
 		"*.{js,jsx,ts,tsx,html,css,json,cjs,md}": "npx prettier --write"
 	},
 	"files": [
-		"dist"
+		"dist/**/*"
 	]
 }
