--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": "npx eslint --fix",
 		"*.(css|scss)": "npx stylelint --fix",
-		"*.{js,jsx,ts,tsx,html,css,json,cjs,md}": "npx prettier --write"
+		"*.{js,jsx,ts,tsx,html,css|scss,json,cjs,md}": "npx prettier --write"
 	},
 	"files": [
 		"dist/**/*"
