--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
 		"@types/node": "^18.13.0",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
+		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
 		"@vitejs/plugin-react": "^3.1.0",
+		"clsx": "^1.2.1",
 		"eslint": "^8.33.0",
 		"eslint-plugin-react": "^7.32.2",
 		"husky": "^8.0.0",
@@ -61,8 +63,10 @@
 		"stylelint-config-recommended-scss": "^8.0.0",
 		"stylelint-config-standard": "^29.0.0",
 		"typescript": "^4.9.3",
+		"uuid": "^9.0.0",
 		"vite": "^4.1.0",
-		"vite-plugin-dts": "^1.7.2"
+		"vite-plugin-dts": "^1.7.2",
+		"vite-plugin-svgr": "^2.4.0"
 	},
 	"peerDependencies": {
 		"react": "*",
@@ -75,8 +79,5 @@
 	},
 	"files": [
 		"dist/**/*"
-	],
-	"dependencies": {
-		"clsx": "^1.2.1"
-	}
+	]
 }
