--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@types/node": "^18.13.0",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
+		"@types/react-transition-group": "^4.4.5",
 		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
@@ -57,6 +58,7 @@
 		"prettier": "2.8.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-transition-group": "^4.4.5",
 		"sass": "^1.58.0",
 		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.4",
