--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@vitejs/plugin-react": "^3.1.0",
 		"clsx": "^1.2.1",
 		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
 		"husky": "^8.0.0",
